cnis/n182/test_channel_1/cnf/pcg/1.21_PCG_CXP9037448_1_R56A1216_common_ip/ingress/eric-data-search-engine-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  name: eric-data-search-engine-tls
  namespace: pcg
spec:
  rules:
  - host: "pcg-eric-data-search-engine-tls.ingress.node182-cluster1.seli.gic.ericsson.se"
    http:
      paths:
      - path: /
        backend:
          service:
            name: eric-data-search-engine-tls
            port:
              number: 9200
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - "pcg-eric-data-search-engine-tls.ingress.node182-cluster1.seli.gic.ericsson.se"
